Add bearer token authentication
