# app/controllers/api/v2/root_controller.rb
@@ -1,6 +1,6 @@
 module Api
   module V2
-    class RootController < ApplicationController
+    class RootController < Api::V2::BaseController
       def index
         render json: base_roots
       end
@@ -13,7 +13,7 @@ module Api
             _links: {
               users: { href: api_v2_users_url },
               groups: { href: api_v2_groups_url },
-              roles: { href: api_v2_roles_url },
+              tokens: { href: api_v2_tokens_url },
             }
           }
         end
