# public/apis101_openapi3.json
@@ -24,9 +24,9 @@
       "description": "A group with many users and roles"
     },
     {
-      "name": "roles",
-      "description": "A role which grants permissions"
-    }
+      "name": "tokens",
+      "description": "Authorization tokens"
+    },
   ],
   "paths": {
     "/users": {
@@ -72,6 +72,9 @@
           "users"
         ],
         "summary": "Create user",
+        "security": [
+          "BearerAuth": [],
+        ],
         "operationId": "createUser",
         "requestBody": {
           "description": "Created user object",
@@ -179,6 +182,9 @@
           "users"
         ],
         "summary": "Update user",
+        "security": [
+          "BearerAuth": [],
+        ],
         "operationId": "updateUser",
         "parameters": [
           {
@@ -227,6 +233,9 @@
           "users"
         ],
         "summary": "Delete user",
+        "security": [
+          "BearerAuth": [],
+        ],
         "operationId": "deleteUser",
         "parameters": [
           {
@@ -255,6 +264,9 @@
           "users"
         ],
         "summary": "Add group to user",
+        "security": [
+          "BearerAuth": [],
+        ],
         "operationId": "addGroupToUser",
         "parameters": [
           {
@@ -285,6 +297,60 @@
           }
         }
       }    
+    },
+    "/tokens": {
+      "post": {
+        "tags": [
+          "tokens"
+        ],
+        "summary": "Create token",
+        "operationId": "createToken",
+        "requestBody": {
+          "description": "Create new authorization token",
+          "required": false,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "created_for": {
+                    "type": "string",
+                    "examples": [
+                      "Joe Bloggs"
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "default": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "description": {
+                      "type": "string",
+                      "examples": [
+                        "Token generated at 2023-11-01 20:49:14 UTC"
+                      ]
+                    },
+                    "jwt": {
+                      "type": "string",
+                      "examples": [
+                        "eyJhbGciOiJIUzI1NiJ9.eyJzb3VyY2UiOiJJIG1hZGUgdGhpcyJ9.xVxd6bE1tepoo2uNu135_LnSyVAk-NYjbxdNd41EfV8"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }      
     }
   },
   "components": {
@@ -324,6 +390,12 @@
         "xml": {
           "name": "##default"
         }
+      }
+    },
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
       }
     }
   }
